crates/djls-extraction/tests/snapshots/corpus__django_core__tests_template_tests_templatetags_subpackage_echo.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "tests.template_tests.templatetags.subpackage.echo::echo2":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg
        required: true
        kind: Variable
        position: 0
    supports_as_var: true
filter_arities: {}
block_specs: {}
