crates/djls-extraction/tests/snapshots/corpus__django_core__tests_template_tests_templatetags_tag_27584.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities: {}
block_specs:
  "tests.template_tests.templatetags.tag_27584::badtag":
    end_tag: endbadtag
    intermediates: []
    opaque: false
