crates/djls-extraction/tests/snapshots/corpus__django_core__tests_template_tests_templatetags_testtags.snap
---
source: crates/djls-extraction/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "tests.template_tests.templatetags.testtags::upper":
    expects_arg: false
    arg_optional: false
block_specs: {}
